[metadata]
name = twwordmap
version = 0.0.0
description = Module Description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/preocts/twwordmap
author = Preocts
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.8

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = W503,E203
max-line-length = 88
